[package]
name = "auto-dungeon"
version = "0.1.0"
authors = ["ltorbay <louistorbay@gmail.com>"]

[dependencies]
sdl2 = { version = "0.35.1", features = ["image", "gfx", "use-bindgen"] }
rand = "0.8.4"
noise = { path = "../noise-rs", version = "0.7.0" }
getrandom = { version = "0.2.3", features = ["js"] }